WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154592
B3::Value doesn't self-destruct virtually enough (Causes many leaks in LowerDFGToB3::appendOSRExit)
https://bugs.webkit.org/show_bug.cgi?id=154592
Summary
B3::Value doesn't self-destruct virtually enough (Causes many leaks in LowerD...
Alexey Proskuryakov
Reported
2016-02-23 10:15:20 PST
Looking at leaks bot output, I noticed that our biggest leaks (aside from an old well known forms one) happen in LowerDFGToB3::appendOSRExit.
https://build.webkit.org//LeaksViewer/?url=%2Fresults%2FApple%20El%20Capitan%20%28Leaks%29%2Fr196979%20%283155%29%2F
Attachments
leaks screenshot
(476.57 KB, image/png)
2016-02-23 10:16 PST
,
Alexey Proskuryakov
no flags
Details
the patch
(3.12 KB, patch)
2016-02-23 13:39 PST
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2016-02-23 10:16:09 PST
Created
attachment 272029
[details]
leaks screenshot
Filip Pizlo
Comment 2
2016-02-23 10:53:42 PST
Looking at this now.
Filip Pizlo
Comment 3
2016-02-23 13:18:15 PST
I can repro the leak by just looking at V8Spider/crypto. I'm hunting for the cause now...
Filip Pizlo
Comment 4
2016-02-23 13:22:10 PST
This bug is because I didn't know how to call a virtual destructor. Patch on the way!
Filip Pizlo
Comment 5
2016-02-23 13:39:15 PST
Created
attachment 272047
[details]
the patch
Filip Pizlo
Comment 6
2016-02-23 14:17:41 PST
Landed in
http://trac.webkit.org/changeset/196996
Alexey Proskuryakov
Comment 7
2016-02-23 19:16:05 PST
Confirmed that it's all fixed. Thank you!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug